# pz-map-generator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  random-world-generator.csproj
data/: colors.json
data/B42/: newtiledefinitions.tiles
docs/: devlog.md
helpers/: build.bat  clean.bat  rebuild.bat  run-fast.bat  run.bat  tests.bat
lib/: app_context.h  constants.h  exceptions.h  theme.h  types.h
lib/algorithms/rect_pack/: best_bin_finder.h  empty_space_allocators.h  empty_spaces.h  finder_interfaces.h  insert_and_split.h  rect_structs.h  rectpack_2d.h
lib/core/: atlas_datas.h  atlas_graph.cpp  atlas_graph.h
lib/files/: lotheader.cpp  lotheader.h  lotpack.cpp  lotpack.h  texturepack.cpp  texturepack.h  tiledefinition.cpp  tiledefinition.h
lib/io/: binary_reader.h  file_reader.cpp  file_reader.h
lib/math/: math.cpp  math.h  vector2i.cpp  vector2i.h
lib/services/: game_files_service.cpp  game_files_service.h  game_path_service.h  map_files_service.cpp  map_files_service.h  tilesheet_service.cpp  tilesheet_service.h
lib/threading/: loading_payload.h
main/: main.cpp  sprite_explorer_panel.cpp  sprite_explorer_panel.h  sprite_info_panel.cpp  sprite_info_panel.h  sprite_panel.cpp
main/cell_viewer/: cell_viewer.cpp  cell_viewer.h
main/cli/: cmd_atlas_graph.h  cmd_cell_viewer.h  cmd_map_viewer.h  cmd_tiles_browser.h  command_manager.h
main/gui/: app_window.cpp  app_window.h  window_manager.cpp  window_manager.h
main/gui/components/: debug_panel.cpp  debug_panel.h  loading_spinner.cpp  loading_spinner.h  spinner.h
main/gui/views/: window_cell_viewer.h  window_tiles_browser.h
main/gui/views/cell_viewer/: cell_viewer.cpp  cell_viewer.h
main/gui/views/map_viewer/: cell_viewer.cpp  cell_viewer.h  window_map_viewer.cpp  window_map_viewer.h
main/gui/views/tiles_browser/: sprite_explorer_panel.cpp  tiles_browser.cpp  tiles_browser.h  window_tiles_browser.cpp  window_tiles_browser.h
main/tiles_browser/: sprite_explorer_panel.cpp  sprite_explorer_panel.h  sprite_info_panel.cpp  sprite_info_panel.h  tiles_browser.cpp
native/: buf_reader_extensions.rs  buf_writer_extensions.rs  cell_coord.rs  constants.rs  lotheader.rs  main.rs
src/: BinaryReader.h  Drawing.cs  GameFileManager.cs  Layer.cs  LotheaderFile.cs  LotpackFile.cs  ObjectGroup.cs  Program.cs  TileSet.cs  TilesFile.cs  TmxFile.cs  TmxReader.cs  Utils.cs  constants.h  main.cpp  types.h
src/Extensions/: BinaryWriterExtensions.cs  ByteArrayExtensions.cs  ObjectExtensions.cs
src/Maths/: Vector3i.cs
src/Tests/: TestVector3i.cs
src/core/: cell_coord.h
src/files/: lotheader.cpp  lotheader.h  lotpack.cpp  lotpack.h  texturepack.cpp  texturepack.h  tiledefinition.cpp  tiledefinition.h
src/io/: binary_reader.cpp  binary_reader.h  file_reader.cpp  file_reader.h  lotheader.cpp  lotheader.h
src/math/: md5.cpp  md5.h
tests/: main.tests.cpp  test_atlas_graph.cpp  test_binary_reader.cpp  test_lotheader.cpp  test_main.cpp
